<resources>
    <string name="app_name">Hicare Pest Control</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">10 digits mobile number</string>
    <string name="log_in">LOGIN</string>
    <string name="forgotten_password">Forgot Password</string>
    <string name="create_new_user_account">Don\'t have Hicare account?</string>
    <string name="register">SIGN UP</string>
    <string name="resend"><u>RESEND</u></string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="today_s_services">Today\'s Service :</string>
    <string name="order_no">Order No. xyz</string>
    <string name="slot">Slot : 11AM - 1PM</string>
    <string name="eta_otp">ETA/OTP : abc</string>
    <string name="order_summary">Order Summary :</string>
    <string name="complaint"><u>Complaint</u></string>
    <string name="first_name">First Name</string>
    <string name="email_id">Email</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="mobile2">Alt. mobile number</string>
    <string name="address">Address</string>
    <string name="Send_OTP">Send otp</string>
    <string name="already_have_an_account">Already have an account? Sign in</string>
    <string name="GPSAlertDialogTitle">GPS is setting</string>
    <string name="GPSAlertDialogMessage">GPS is not enabled. Do you want to go to setting menu</string>
    <string name="GPSIssue">GPS is working properly.Please restart your Phone to use app.</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="Lastname">Last name</string>
    <string name="invalid_last_name">Invalid Last Name</string>
    <string name="invalid_mobile_number">Invalid Mobile Number</string>
    <string name="invalid_first_name">Invalid First Name</string>
    <string name="invalid_email">Invalid Email</string>

    <string name="no_geocoder_available">No geocoder available</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="no_items">No Items</string>
    <string name="customer_name">Name</string>
    <string name="alt_mobile_no">Alt. Mobile Number</string>
    <string name="email">Email</string>
    <string name="interested_service">Interested Service</string>
    <string name="last_name">Last Name</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
</resources>
