<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="model"
            type="com.arj.hicarehygiene.viewmodel.UserLoginViewModel" />

        <variable
            name="handler"
            type="com.arj.hicarehygiene.handler.UserLoginClickHandler" />
    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@drawable/ic_bgwave"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="Welcome!"
                android:textColor="@color/white"
                android:textSize="33dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="right"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="We hope you enjoy the stay."
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="right"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/back"
            android:layout_above="@id/lnrWaves"
            android:orientation="vertical">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/imageViewLogo"
                    android:layout_width="110dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_new_moon"
                    android:contentDescription="@string/app_name"
                    android:src="@mipmap/logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:maxLines="2"
                    android:text="Login to continue with Hicare Pest Conrol"
                    android:textColor="@color/lightblack"
                     />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp">

                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:padding="7dp"
                            app:srcCompat="@drawable/ic_phone" />

                        <EditText
                            android:id="@+id/editTextUsername"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="0123456789"
                            android:ems="10"
                            android:hint="@string/phone_number"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLength="10"
                            android:text="@={model.username}" />
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/lnr_otp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="8dp"
                        android:paddingBottom="4dp"
                        android:visibility="gone">

                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:padding="8dp"
                            app:srcCompat="@drawable/ic_password" />


                        <com.mukesh.OtpView
                            android:id="@+id/edt_otp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:textColor="@android:color/black"
                            app:itemCount="6"
                            app:itemSpacing="3dp"
                            app:lineColor="@color/black"
                            app:lineWidth="1dp"
                            app:viewType="line" />

                        <!--<EditText-->
                        <!--android:id="@+id/edt_otp"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:inputType="number"-->
                        <!--android:digits="0123456789"-->
                        <!--android:hint="OTP"-->
                        <!--android:text="@={model.otp}"-->
                        <!--/>-->


                        <!--<LinearLayout-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_gravity="center"-->
                        <!--android:layout_marginLeft="5dp"-->
                        <!--android:orientation="vertical">-->

                        <!--<TextView-->
                        <!--android:id="@+id/timerValue"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_gravity="center"-->
                        <!--android:text="00:00"-->
                        <!--android:textColor="@color/colorAccent"-->
                        <!--android:textSize="16sp" />-->

                        <!--<TextView-->
                        <!--android:id="@+id/txt_send"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_gravity="right"-->
                        <!--android:layout_marginTop="3dp"-->
                        <!--android:gravity="center"-->
                        <!--android:visibility="gone"-->
                        <!--android:text="@string/resend"-->
                        <!--android:textColor="@color/colorPrimary"-->
                        <!--android:textSize="15dp" />-->
                        <!--</LinearLayout>-->

                    </LinearLayout>


                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/buttonSignIn"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/btn_gradient"
                        android:onClick="@{(view) -> handler.onLoginClicked(view)}"
                        android:text="@string/log_in"
                        android:textSize="18dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"

                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/txt_resend"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="10dp"
                            android:onClick="@{(view) -> handler.onResendOtpClicked(view)}"
                            android:text="Did't get the OTP? Resend OTP"
                            android:textColor="@color/black" />

                    </LinearLayout>
                </LinearLayout>


                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/buttonForgotPassword"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:onClick="@{(view) -> handler.onForgotPasswordClicked(view)}"
                    android:text="@string/forgotten_password"
                    android:textSize="16dp"
                    android:visibility="gone" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/tab_textColor"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/create_new_user_account"
                    android:textColor="@color/lightblack"
                    android:visibility="gone"

                    />

                <TextView
                    android:id="@+id/buttonSignUp"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:onClick="@{(view) -> handler.onRegisterClicked(view)}"
                    android:text="@string/register"
                    android:textSize="16dp"
                    android:visibility="gone" />

            </LinearLayout>


<LinearLayout
    android:id="@+id/lnrWaves"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_alignParentBottom="true"
    android:background="@drawable/oppwave"
    android:orientation="vertical">

</LinearLayout>



    </RelativeLayout>


</layout>